force-app/main/default/objects/VolunteerJob__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Volunteer Jobs</relationshipLabel>
    <relationshipName>VolunteerJobs</relationshipName>
    <type>Lookup</type>
</CustomField>