force-app/main/default/objects/VolunteerJob__c/fields/NumberOfCompletedHours__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCompletedHours__c</fullName>
    <label>Number of Completed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>