force-app/main/default/objects/VolunteerJob__c/fields/NumberOfShifts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfShifts__c</fullName>
    <label>Number of Shifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>