force-app/main/default/objects/VolunteerJob__c/fields/SignupLink__c.field-meta.xml
<CustomField>
    <fullName>SignupLink__c</fullName>
    <label>Signup Link</label>
    <type>Url</type>
</CustomField>