force-app/main/default/objects/VolunteerJob__c/fields/SkillsNeeded__c.field-meta.xml
<CustomField>
    <fullName>SkillsNeeded__c</fullName>
    <label>Skills Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VolunteerSkills</valueSetName>
    </valueSet>
</CustomField>